--- a/pari-bench/Cargo.toml
+++ b/pari-bench/Cargo.toml
@@ -11,7 +11,7 @@ ark-ff = { workspace = true }
 ark-ec = { workspace = true }
 ark-std = { workspace = true }
 ark-poly = { workspace = true }
-ark-crypto-primitives = { workspace = true, features = ["constraints"] }
+ark-crypto-primitives = { workspace = true }
 ark-r1cs-std = { workspace = true }
 ark-relations = { workspace = true }
 merlin = { workspace = true }
